# medium

./: ndk_crash_tool.sh  settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/wangzhumo/app/medium/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wangzhumo/app/medium/: MainActivity.java
app/src/main/java/com/wangzhumo/app/medium/utils/: GlideLoadEngine.java
app/src/main/java/com/wangzhumo/app/medium/widget/: CustomSurfacePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wangzhumo/app/medium/: ExampleUnitTest.java
